--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,6 @@
-@import './components/TutorialHeader/tutorial-header.scss';
-@import './content/LandingPage/landing-page.scss';
-@import './content/RepoPage/repo-page.scss';
 @import './content/WelcomePage/welcome-page.scss';
 @import './components/Navbar/navbar.scss';
 @import './content/Passcode/Passcode.scss';
 @import './content/ZipDay/zipday.scss';
+@import './content/LandingPage/landing-page.scss';
+@import './content/RegistrationForm/registration-form';
