--- a/src/index.scss
+++ b/src/index.scss
@@ -11,9 +11,17 @@ $feature-flags: (
 /// @link https://github.com/carbon-design-system/carbon/issues/2789
 main {
   display: block;
-  width: 320px;
-  height: 600px;
+  width: 375px;
+  height: 785px;
   margin: auto;
+}
+
+@media (max-width: 320px) {
+  main {
+    width: 320px;
+    height: 600px;
+    margin: auto;
+  }
 }
 
 /// Need grid option to not add page gutters at large viewports, to also use when nesting grids
