--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@ $feature-flags: (
 /// @link https://github.com/carbon-design-system/carbon/issues/2789
 main {
   display: block;
-  width: 375px;
+  width: 100%;
   height: 785px;
   margin: auto;
 }
